--- a/geometric-fractions.html
+++ b/geometric-fractions.html
@@ -4,6 +4,7 @@
 <meta name=viewport content="width=device-width,initial-scale=1">
 <meta charset="utf-8"/>
 <script src="https://www.geogebra.org/apps/deployggb.js"></script>
+<script src="https://telegram.org/js/telegram-web-app.js"></script>
 
 </head>
 <body>
